# cog_worker

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml  run-tests.yml
cog_worker/: __init__.py  distributed.py  manager.py  types.py  utils.py  worker.py
docs/: .buildinfo  .buildinfo.bak  api_reference.html  examples.html  genindex.html  index.html  key_concepts.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/cog_worker/: distributed.html  manager.html  worker.html
docs/_sources/: examples.rst.txt  index.rst.txt
docs/_sources/cog_worker/: 2. manager.rst.txt  4. types.rst.txt
docs/_sources/examples/: 1. quick-start.ipynb.txt  2. tutorial.ipynb.txt  3. tile-server.ipynb.txt  4. stac-ndvi.ipynb.txt
docs/_static/: pygments.css
docs/cog_worker/: 1. worker.html  2. manager.html  3. distributed.html  4. types.html
docs/examples/: 1. quick-start.html  1. quick-start.ipynb  2. tutorial.html  2. tutorial.ipynb  3. tile-server.html  3. tile-server.ipynb  4. stac-ndvi.html  4. stac-ndvi.ipynb
docs/source/: api_reference.rst  conf.py
docs/source/cog_worker/: 1. worker.rst  3. distributed.rst
docs/source/examples/: 1. quick-start.ipynb
sphinx_docs/: Makefile
sphinx_docs/source/: conf.py  index.rst  key_concepts.rst
sphinx_docs/source/examples/: 1. quick-start.ipynb  2. tutorial.ipynb
src/cog_worker/: __init__.py  distributed.py  manager.py  types.py  utils.py  worker.py
tests/: test_distributed.py  test_manager.py  test_utils.py  test_worker.py
