[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cog_worker"
description = "Scalable geospatial analysis on Cloud Optimized GeoTIFFs."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Francis Gassert", email = "francis.gassert@vizzuality.com" },
]
keywords = ["cog", "geotiff", "raster", "gdal", "rasterio", "dask"]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dynamic = ["version"]
dependencies = [
    "numpy>=1",
    "pyproj>=3.0.0",
    "rasterio>=1.3",
    "morecantile>=5.0.0,<6.0.0",
    "rio_tiler>=6.0.0,<7.0.0",
]

[project.urls]
Homepage = "https://github.com/vizzuality/cog_worker"
Issues = "https://github.com/vizzuality/cog_worker/issues"

[project.optional-dependencies]
test = ["pytest"]
dev = ["pre-commit", "bump-my-version"]
distributed = ["dask[distributed]"]
docs = ["Sphinx", "sphinxcontrib-napoleon", "furo", "nbsphinx", "nbconvert"]

[tool.setuptools.package-data]
cog_worker = ["py.typed"]

[tool.ruff]
line-length = 120
extend-include = ["*.ipynb"]
src = ["src"]

[tool.ruff.lint]
select = [
    "D1", # pydocstyle errors
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # flake8
    "N",  # Naming conventions
    "I",  # isort
    "UP",  # pyupgrade
    "PL",  # Pylint
]
ignore = [
    "PLR0913", # too many arguments in function definition (5)
]
pydocstyle.convention = "google"
pydocstyle.ignore-decorators = ["property"]

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = [
    "D103", # Missing docstring in public function
    "D100", # Missing docstring in public module
    "PLR2004" # Magic value used in comparisson. Not a problem in tests
]

[tool.bumpversion]
current_version = "0.2.0"
tag = true
commit = true

[[tool.bumpversion.files]]
filename = "src/cog_worker/__init__.py"

[[tool.bumpversion.files]]
filename = "sphinx_docs/source/conf.py"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
